# spoq-tui

./: .env.example  .mcp.json  ARCHITECTURE.md  ASKUSERQUESTION_FIX_PLAN.md  BYOVPS_PROVISIONING_ISSUE.md  Cargo.toml  DEAD_CODE_REPORT_ROUND2.md  DEAD_CODE_REPORT_ROUND3.md  DEAD_CODE_REPORT_ROUND4.md  INTEGRATION_PLAN.md  PHASE_3_CHANGES.md  README.md  TUI_RESEARCH.md  albert_einstein.txt  dev.sh  install.sh  quality-gate-phase3-report.md  run.sh  test_isatty  test_isatty.c  test_tty.sh
.claude/: release-quick-ref.md  settings.json
.github/workflows/: build-and-deploy.yml  ci.yml  release.yml
benches/: render_benchmark.rs
data/threads/: threads.json
docs/: README.md  RELEASE.md  TUI_RESEARCH.md  agent-vm-fundamentals.md  backend-issue-thread-titles-null.md  investigation-token-refresh-phase1.md  jwt-auth.md  orb-memory-architecture.md  osforagents-ideation.md  osforagents-implementation.md  phase-2-nova-thread-id-modification.md  plan_mode_fix_spec.md  slash-commands.md
docs/brainstorms/: 2026-01-22-cli-startup-flow-fix-brainstorm.md  2026-01-22-startup-health-check-sequence.md  2026-01-22-startup-vps-token-verification.md  2026-01-22-token-verification-brainstorm.md
docs/design/: README.md  conversation-scroll-performance-spec.md
docs/future-plans/: 00-overview.md  01-cloud-product.md  02-jetson-product.md  03-networking.md  04-multi-user.md  05-setup-flows.md  06-migration.md  07-notifications.md  distribution-and-auth.md
docs/plans/: 2026-01-22-feat-startup-health-check-conductor-endpoint.md  2026-01-22-feat-startup-health-check-with-token-verification.md  2026-01-22-feat-token-verification-before-after-provisioning-plan.md  2026-01-22-fix-cli-startup-flow-bugs-plan.md  2026-01-22-fix-vps-state-sync-before-provisioning-plan.md
examples/: gh_auth_test.rs
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/spoq/: bin.js  bin.test.js  install.js  install.test.js  package.json
npm/win32-x64/: package.json
scripts/: e2e_real_pulsar_test.sh  e2e_test_scenario.sh  export_all_cookies.py  modify-test-keychain.sh  release.sh  test-keychain-detection.sh  test_thread_id_flow.sh  validate.sh  verify_status_format.sh
scripts/codex/: autonomy-loop.sh
scripts/lib/: e2e_helpers.sh  test_create_thread_api.sh  test_e2e_helpers.sh  test_verification_helpers.sh
scripts/migration/: creds-migrate.ps1  creds-migrate.sh  repos-manage.sh
scripts/test/: test_tui_vision_helpers.sh
scripts/water-reminder/: README.md  com.claude.waterreminder.plist  install-water-reminder.sh  water-reminder.sh
specs/: README.md  autonomous-loop-orchestrator-spec.md  conversation-scroll-performance-spec.md  ultimate-autonomous-loop-orchestrator-spec.md
src/: app.rs  cache.rs  clipboard.rs  conductor.rs  debug.rs  events.rs  health_check.rs  input_history.rs  lib.rs  main.rs  markdown.rs  models.rs  notifications.rs  prelude.rs  rendered_lines_cache.rs  sse.rs  state.rs  storage.rs  ui.rs
src/adapters/: default_sse.rs  file_credentials.rs  mod.rs  reqwest_http.rs  tungstenite_ws.rs
src/app/: actions.rs  backend_coordinator.rs  cancel.rs  cursor_blink.rs  handlers.rs  messages.rs  mod.rs  navigation.rs  permissions.rs  state_methods.rs  stream.rs  thread_mode_sync.rs  types.rs  utils.rs  view.rs  websocket.rs
src/auth/: central_api.rs  credentials.rs  device_flow.rs  flow.rs  mod.rs  provisioning_flow.rs  token_migration.rs  token_verification.rs
src/cache/: error.rs  message.rs  mod.rs  reconciliation.rs  thread.rs  tools.rs
src/cli/: args.rs  mod.rs  sync.rs  update.rs  version.rs
src/cli_output/: boxes.rs  mod.rs
src/conductor/: local.rs  mod.rs
src/credential_watcher/: coordinator.rs  debouncer.rs  file_watcher.rs  keychain_poller.rs  keychain_provider.rs  mod.rs  state.rs  types.rs
src/debug/: events.rs  mod.rs  (+2 more)
tests/: api_backward_compat.rs  architecture_integration_test.rs  attempt_token_refresh_test.rs  auth_integration_test.rs  auth_refresh_test.rs  byovps_test.rs  cache_integration_test.rs  conductor_integration_test.rs  dashboard_integration.rs  debug_server_test.rs  dirty_flag_test.rs  input_history_integration_test.rs  integration.rs  managed_vps_token_migration_test.rs  message_height_cache_test.rs  paste_summarize_test.rs  payment_integration_test.rs  plan_20260125_0314_test.rs  plan_approval_input_fix_test.rs  provisioning_input_test.rs  question_card_render_test.rs  question_flow_integration_test.rs  question_full_flow_integration_test.rs  responsive_layout_test.rs  round1_fixes_test.rs  round1_plan_20260125_1845_test.rs  round2_cursor_blink_test.rs  round2_scroll_test.rs  round2_test.rs  round3_test.rs  round4_test.rs  round5_test.rs  round8_vps_provisioning_test.rs  scroll_test.rs  setup_flow_test.rs  ssh_transfer_test.rs  startup_flow_fix_test.rs  startup_update_check_test.rs  subagent_integration_test.rs  sync_command_test.rs  (+11 more)
(+200 files in other folders)
