[package]
name = "spoq"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
eventsource-client = "0.12"
futures-util = "0.3"
pulldown-cmark = "0.12"
open = "5"
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = "0.21"
tower-http = { version = "0.5", features = ["cors"] }
arboard = "3"
tui-textarea = { git = "https://github.com/phsym/tui-textarea.git", branch = "main", features = ["ratatui"] }
unicode-width = "0.2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_benchmark"
harness = false
