[package]
name = "spoq"
version = "0.2.4"
edition = "2021"
description = "A TUI client for spoq"
license = "MIT"
repository = "https://github.com/AWLSEN/spoq-tui"
homepage = "https://github.com/AWLSEN/spoq-tui"
keywords = ["tui", "terminal", "cli"]
categories = ["command-line-interface"]
readme = "README.md"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
eventsource-client = "0.12"
futures-util = "0.3"
pulldown-cmark = "0.12"
regex = "1"
once_cell = "1"
open = "5"
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tower-http = { version = "0.5", features = ["cors"] }
arboard = "3"
tui-textarea = { path = "vendor/tui-textarea", features = ["crossterm_0_28"] }
unicode-width = "0.2"
dirs = "5"
hostname = "0.4.2"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
sha2 = "0.10"
hex = "0.4"
rpassword = "7"
ctrlc = "3"
webbrowser = "1.0"
thiserror = "1"
async-trait = "0.1"
bytes = "1"

# SSH/SFTP for credentials sync to VPS
ssh2 = "0.9"

# PTY for interactive CLI automation (gh auth login)
portable-pty = "0.8"

# Vendored OpenSSL for cross-compilation (ssh2 requires OpenSSL)
openssl = { version = "0.10", features = ["vendored"] }
tui-scrollview = "0.6.2"

# File system watching for credential change detection
notify = "8.0"
urlencoding = "2.1.3"

# macOS Keychain access (for Claude Code OAuth tokens)
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
wiremock = "0.6"
serial_test = "3"

[[bench]]
name = "render_benchmark"
harness = false

[profile.release]
lto = "thin"
strip = true
opt-level = 3
codegen-units = 1
